test_regress/t/t_tri_pull2_bad.out
%Error: t/t_tri_pull2_bad.v:9: Unsupported: Conflicting pull directions.
        t/t_tri_pull2_bad.v:19: ... Location of conflicting pull.
%Error: Exiting due to
